# sync_device_32

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Communication Protocol.xmind  README.md  build_docs.py  build_release.py  com.py  main.cpp  microsync.atsln  rev_pin_map.py  scheduler prototype.ipynb  sync_dev.ipynb  sync_device_32.atsln
.github/workflows/: deploy-docs.yml
.ipynb_checkpoints/: com-checkpoint.py
doc/: data packet structure.xlsx  special pins.xlsx  system_arch_diagram.drawio
microsync/: main.cpp  microsync.cppproj
microsync/src/: events.cpp  events.h  ext_pTIRF.cpp  ext_pTIRF.h  globals.h  interlock.cpp  interlock.h  pins.h  props.h  uart_comm.cpp  uart_comm.h
microsync/src/ASF/sam/boards/arduino_due_x/: init.c
microsync/src/ASF/sam/drivers/pio/: pio_handler.c
python/: MANIFEST.in  __version__.py  constants.py  install.py  microsync.py  microsync_demo.ipynb  pyproject.toml  requirements.txt  rev_pin_map.py  sync device demo.ipynb  sync_dev.ipynb  sync_dev.py
sphinx_docs/: Doxyfile  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
sphinx_docs/api/: index.rst
sphinx_docs/cpp/: architecture.rst  firmware.rst
sync_device_32/: main.cpp  sync_device_32.componentinfo.xml  sync_device_32.cppproj  sync_device_32.cproj
sync_device_32/src/: asf.h  events.cpp  events.h  ext_pTIRF.cpp  ext_pTIRF.h  globals.h  interlock.cpp  interlock.h  main.c  pins.cpp  pins.h  props.cpp  props.h  sd_comport.c  sd_comport.h  sd_events.c  sd_events.h  sd_globals.h  sd_pin_map.c  sd_pin_map.h  sd_triggers.c  sd_triggers.h  sys_globals.h  uart_comm.cpp  uart_comm.h
sync_device_32/src/ASF/common/services/serial/sam_uart/: uart_serial.h
sync_device_32/src/ASF/sam/drivers/wdt/: wdt.c
sync_device_32/src/ASF/sam/utils/cmsis/sam3x/source/templates/gcc/: startup_sam3x.c
sync_device_32/src/ASF/sam/utils/syscalls/gcc/: syscalls.c
